
# https://cmake.org/cmake/help/v3.9/module/FindDoxygen.html
# http://www.doxygen.nl/manual/config.html
doxygen_add_docs(documentation ../src README.md
	COMMENT "Generate documentation"
	DOXYGEN_ALWAYS_DETAILED_SEC YES
	DOXYGEN_QUIET YES
	DOXYGEN_SOURCE_BROWSER YES
	DOXYGEN_HIDE_UNDOC_RELATIONS NO
	DOXYGEN_HIDE_UNDOC_MEMBERS NO
	DOXYGEN_HIDE_UNDOC_CLASSES NO
	DOXYGEN_EXTRACT_PRIVATE YES
	DOXYGEN_INLINE_SOURCES YES
	DOXYGEN_REFERENCED_BY_RELATION YES
	DOXYGEN_REFERENCES_RELATION YES
	DOXYGEN_JAVADOC_BANNER YES 
	DOXYGEN_HAVE_DOT YES
	DOXYGEN_MARKDOWN_SUPPORT YES
	DOXYGEN_DOT_MULTI_TARGETS YES
	DOXYGEN_RECURSIVE YES 
	DOXYGEN_MULTILINE_CPP_IS_BRIEF YES
	DOXYGEN_INHERIT_DOCS YES
	DOXYGEN_JAVADOC_AUTOBRIEF YES
	DOXYGEN_SORT_BRIEF_DOCS YES
	DOXYGEN_SORT_BY_SCOPE_NAME YES
	DOXYGEN_SORT_MEMBERS_CTORS_1ST YES
	DOXYGEN_SORT_GROUP_NAMES YES
	DOXYGEN_QT_AUTOBRIEF YES
	DOXYGEN_INTERNAL_DOCS YES
	DOXYGEN_GENERATE_DOCBOOK YES
	DOXYGEN_GENERATE_DOCSET YES
	DOXYGEN_GENERATE_HTMLHELP YES
	DOXYGEN_GENERATE_CHI YES
	DOXYGEN_GENERATE_ECLIPSEHELP YES
	DOXYGEN_GENERATE_TREEVIEW YES
	DOXYGEN_GENERATE_TODOLIST YES
	DOXYGEN_GENERATE_TESTLIST YES
	DOXYGEN_GENERATE_BUGLIST YES
	DOXYGEN_GENERATE_DEPRECATEDLIST YES
	DOXYGEN_GENERATE_LEGEND YES
	DOXYGEN_GENERATE_MAN YES
	DOXYGEN_TOC_EXPAND YES
	DOXYGEN_TOC_INCLUDE_HEADINGS 99
	DOXYGEN_HTML_TIMESTAMP YES
	DOXYGEN_SHOW_FILES YES
	DOXYGEN_SHOW_NAMESPACES YES
	DOXYGEN_ENUM_VALUES_PER_LINE 6
	DOXYGEN_GRAPHICAL_HIERARCHY YES
	DOXYGEN_DIRECTORY_GRAPH YES
	DOXYGEN_DOT_IMAGE_FORMAT svg
	DOXYGEN_DOT_FONTSIZE 24
	DOXYGEN_DOT_GRAPH_MAX_NODES 1000
	DOXYGEN_INTERACTIVE_SVG YES
	DOXYGEN_BUILTIN_STL_SUPPORT YES
)
#add_subdirectory(examples)

#target_include_directories
#Add include directories to a target.
	#- target_include_directories(<target> [SYSTEM] [BEFORE] <INTERFACE|PUBLIC|PRIVATE> 
#	 [items1...] [<INTERFACE|PUBLIC|PRIVATE> [items2...] ...])
	#- target_include_directories(mylib PUBLIC $<BUILD_INTERFACE:$
#	 {CMAKE_CURRENT_SOURCE_DIR}/include/mylib> $<INSTALL_INTERFACE:include/mylib> # <prefix>/
	 #include/mylib )
# ** [ ] TODO: Review src target_include_directories
#target_include_directories(bq_sdl2 PUBLIC ./ $<INSTALL_INTERFACE:include/bq/sdl2)
#
# ** [ ] TODO: Review src link_libraries
#target_link_libraries(modern_li