set( DOXYGEN_OUTPUT_DIRECTORY 		${PROJECT_NAME} )
set( DOXYGEN_ALWAYS_DETAILED_SEC	YES )
set( DOXYGEN_QUIET 					YES )
set( DOXYGEN_SOURCE_BROWSER 		YES )
set( DOXYGEN_HIDE_UNDOC_RELATIONS 	NO )
set( DOXYGEN_HIDE_UNDOC_MEMBERS 	NO )
set( DOXYGEN_HIDE_UNDOC_CLASSES 	NO )
set( DOXYGEN_EXTRACT_PRIVATE 		YES )
set( DOXYGEN_INLINE_SOURCES			YES )
set( DOXYGEN_REFERENCED_BY_RELATION YES )
set( DOXYGEN_REFERENCES_RELATION 	YES )
set( DOXYGEN_JAVADOC_BANNER 		YES ) 
set( DOXYGEN_HAVE_DOT 				YES )
set( DOXYGEN_MARKDOWN_SUPPORT 		YES )
set( DOXYGEN_DOT_MULTI_TARGETS 		YES )
set( DOXYGEN_RECURSIVE 				YES ) 
set( DOXYGEN_MULTILINE_CPP_IS_BRIEF YES )
set( DOXYGEN_INHERIT_DOCS 			YES )
set( DOXYGEN_JAVADOC_AUTOBRIEF 		YES )
set( DOXYGEN_SORT_BRIEF_DOCS 		YES )
set( DOXYGEN_SORT_BY_SCOPE_NAME 	YES )
set( DOXYGEN_SORT_MEMBERS_CTORS_1ST YES )
set( DOXYGEN_SORT_GROUP_NAMES 		YES )
set( DOXYGEN_QT_AUTOBRIEF 			YES )
set( DOXYGEN_INTERNAL_DOCS 			YES )
set( DOXYGEN_GENERATE_DOCBOOK 		YES )
set( DOXYGEN_GENERATE_DOCSET 		YES )
set( DOXYGEN_DOCSET_FEEDNAME        "Doxygen generated docs from ${PROJECT_NAME} source." )
set( DOXYGEN_DOCSET_BUNDLE_ID       institute.ufp.bq.${PROJECT_SHORTNAME} )
set( DOXYGEN_DOCSET_PUBLISHER_ID    institute.ufp )
set( DOXYGEN_DOCSET_PUBLISHER_NAME  BadQuanta@ufp.institute )
set( DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md )
set( DOXYGEN_EXAMPLE_PATH           ${PROJECT_SOURCE_DIR}/src )
set( DOXYGEN_EXAMPLE_PATTERNS       *_test.cpp )
set( DOXYGEN_EXAMPLE_RECURSIVE      YES )
set( DOXYGEN_GENERATE_RTF 			YES )
set( DOXYGEN_CALL_GRAPH 			YES )
set( DOXYGEN_WARN_NO_PARAMDOC 		YES )
set( DOXYGEN_CALLER_GRAPH 			YES )
set( DOXYGEN_GENERATE_ECLIPSEHELP 	YES )
set( DOXYGEN_GENERATE_LATEX 		YES )
set( DOXYGEN_GENERATE_TREEVIEW 		NO )
set( DOXYGEN_GENERATE_QHP 			YES )
set( DOXYGEN_SEARCHENGINE 			YES )
set( DOXYGEN_GENERATE_TODOLIST 		YES )
set( DOXYGEN_GENERATE_TESTLIST 		YES )
set( DOXYGEN_GENERATE_BUGLIST 		YES )
set( DOXYGEN_GENERATE_DEPRECATEDLIST YES )
set( DOXYGEN_GENERATE_LEGEND 		YES )
set( DOXYGEN_GENERATE_MAN 			YES )
set( DOXYGEN_TOC_EXPAND 			YES )
set( DOXYGEN_TOC_INCLUDE_HEADINGS 	99 )
set( DOXYGEN_HTML_TIMESTAMP 		YES )
set( DOXYGEN_SHOW_FILES 			YES )
set( DOXYGEN_SHOW_NAMESPACES 		YES )
set( DOXYGEN_ENUM_VALUES_PER_LINE 	6 )
set( DOXYGEN_GRAPHICAL_HIERARCHY 	YES )
set( DOXYGEN_DIRECTORY_GRAPH 		YES )
set( DOXYGEN_DOT_IMAGE_FORMAT 		svg )
set( DOXYGEN_DOT_FONTSIZE 			24 )
set( DOXYGEN_DOT_GRAPH_MAX_NODES 	1000 )
set( DOXYGEN_INTERACTIVE_SVG 		YES )
set( DOXYGEN_BUILTIN_STL_SUPPORT 	YES )
# https://cmake.org/cmake/help/v3.9/module/FindDoxygen.html
# http://www.doxygen.nl/manual/config.html
doxygen_add_docs(documentation ../src ../README.md ../LICENSE)
#add_subdirectory(examples)

